nhutran update detail page and related item in market

--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -9,7 +9,7 @@
 
     {% for item in items %}
     <div>
-        <a href="#">
+        <a href="{% url "item:detail" item.id %}">
             <div>
                 <img src="{{ item.image.url }}" class="rounded-t-xl h-48 w-96">
             </div>
