--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -16,7 +16,7 @@
     </head>
     <body>
         <nav class="py-6 px-6 flex justify-between items-center border-b border-gray-200">
-            <a href="/" class="text-xl font-semibold">Puddle</a>
+            <a href="/" class="text-xl font-semibold">Tran Khac Nhu Market Online</a>
 
             <div class="space-x-6">
                 <a href="/" class="text-lg font-semibold hover:text-gray-500">New item</a>
