nhutran update detail and add new item component

--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -19,7 +19,7 @@
             <a href="/" class="text-xl font-semibold">Tran Khac Nhu Market Online</a>
 
             <div class="space-x-6">
-                <a href="/" class="text-lg font-semibold hover:text-gray-500">New item</a>
+                <a href={% url "item:new" %} class="text-lg font-semibold hover:text-gray-500">New item</a>
                 <a href="/"  class="text-lg font-semibold hover:text-gray-500">Browse</a>
 
 
