--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -16,11 +16,11 @@
     </head>
     <body>
         <nav class="py-6 px-6 flex justify-between items-center border-b border-gray-200">
-            <a href="/" class="text-xl font-semibold">Tran Khac Nhu Market Online</a>
+            <a href="{% url "item:items" %}" class="text-xl font-semibold">Tran Khac Nhu Market Online</a>
 
             <div class="space-x-6">
                 <a href={% url "item:new" %} class="text-lg font-semibold hover:text-gray-500">New item</a>
-                <a href="/"  class="text-lg font-semibold hover:text-gray-500">Browse</a>
+                <a href="{% url "item:items" %}"  class="text-lg font-semibold hover:text-gray-500">Browse</a>
 
 
                 <a href="#" class="px-6 py-3 text-lg font-semibold bg-teal-500 text-white rounded-xl hover:bg-teal-700">Inbox</a>
